ntusecondhand/static/css/main.css
/* ... */
body {
    background: #2F3238;
    color: #7F8289;
    font-weight: 300;
    font-size: 16px;
    font-family: 'Titillium Web', sans-serif;
    line-height: 28px;
}

a {
    color: #DE5E60;
    text-decoration: none;
    cursor: pointer;

    -webkit-transition: color 0.1s linear 0s;
    -moz-transition: color 0.1s linear 0s;
    -o-transition: color 0.1s linear 0s;
    transition: color 0.1s linear 0s;
}

a:hover,
a:active,
a:focus {
    outline: 0;
    color: #FFFFFF;
    text-decoration: none;
}

a img {
    border: none;
}

a > img {
    vertical-align: bottom;
}

strong {
    font-weight: 500;
}

p {
    margin: 0 0 30px;
}

hr {
    border: none #3C3F45;
    border-top-style: dashed;
    margin: 50px 0;
}

.align_left {
    float: left;
    margin: 0 25px 0 0 !important;
}

.align_right {
    float: right;
    margin: 0 0 0 25px !important;
}

.text_align_left {
    text-align: left;
}

.text_align_center {
    text-align: center;
}

.text_align_right {
    text-align: right;
}

.color-text {
    color: #DE5E60;
}

.through {
    text-decoration: line-through;
}

input, button, select, textarea {
    font-weight: 300;
    font-family: 'Titillium Web', sans-serif;
    outline: 0;
}

input:focus,
textarea:focus,
input[type="text"]:focus {
    outline: 0;
}

input:-moz-placeholder,
textarea:-moz-placeholder {
    color: #7F8289;
}

input:-ms-input-placeholder,
textarea:-ms-input-placeholder {
    color: #7F8289;
}

input::-webkit-input-placeholder,
textarea::-webkit-input-placeholder {
    color: #7F8289;
}

/* ==================================================
   Code and Pre
================================================== */

code,
pre {
    padding: 0 3px 2px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    color: #232527;
    font-size: 12px;
    font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
}

code {
    padding: 2px 4px;
    border: 1px solid #dde4e9;
    background-color: #F6F6F6;
    color: #232527;
    white-space: nowrap;
}

pre {
    display: block;
    margin: 70px 50px;
    padding: 30px;
    border: 1px solid #dde4e9;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    background-color: #FCFCFC;
    white-space: pre-wrap;
    word-wrap: break-word;
    word-break: break-all;
    font-size: 12px;
    line-height: 20px;
}

pre code {
    padding: 0;
    border: 0;
    background-color: transparent;
    color: inherit;
    white-space: pre-wrap;
}

.pre-scrollable {
    overflow-y: scroll;
    max-height: 340px;
}

/* ==================================================
   Typography
================================================== */

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0 0 20px 0;
    color: #FFFFFF;
    font-weight: 300;
    font-family: 'Titillium Web', sans-serif;
    line-height: 1.5em;
}

h1 {
    font-size: 48px;
}

h2 {
    font-size: 36px;
}

h3 {
    font-size: 24px;
}

h4 {
    font-size: 20px;
}

h5 {
    font-size: 18px;
}

h6 {
    font-size: 16px;
}

h3.spec {
    color: #FFFFFF;
    font-size: 24px;
    font-weight: 300;
    line-height: 1em;
    margin-bottom: 30px;
    text-transform: uppercase;
}

/* ==================================================
   Margin Bottom Sets
================================================== */

.margin-0 {
    margin-bottom: 0 !important;
}

.margin-10 {
    margin-bottom: 10px !important;
}

.margin-15 {
    margin-bottom: 15px !important;
}

.margin-20 {
    margin-bottom: 20px !important;
}

.margin-30 {
    margin-bottom: 30px !important;
}

.margin-40 {
    margin-bottom: 40px !important;
}

.margin-50 {
    margin-bottom: 50px !important;
}

.margin-60 {
    margin-bottom: 60px !important;
}

.margin-70 {
    margin-bottom: 70px !important;
}

.margin-80 {
    margin-bottom: 80px !important;
}

/* ==================================================
   Navigation
================================================== */

header {
    width: 100%;
    z-index: 1;
}

header .sticky-nav {
    position: fixed;
    width: 100%;
    height: 60px;
    background: #26292E;
    z-index: 1;

    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
    -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
}

header .sticky-nav.stuck {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1;
}

header #logo {
    color: #FFFFFF;
    float: left;
    padding: 15px 0;
    margin-left: 20px;
}

header #logo a {
    background-image: url(../img/logo.png);
    background-size: cover;
    width: 90px;
    height: 30px;
    text-indent: -9999px;
    display: block;
    opacity: 1;
    filter: alpha(opacity=100);

    -webkit-transition: opacity 0.25s ease-in-out 0s;
    -moz-transition: opacity 0.25s ease-in-out 0s;
    -o-transition: opacity 0.25s ease-in-out 0s;
    transition: opacity 0.25s ease-in-out 0s;
}

header #logo a:hover {
    opacity: 0.65;
    filter: alpha(opacity=65);
}

nav#menu {
    float: right;
    margin-right: 20px;
}

nav#menu #menu-nav {
    margin: 0;
    padding: 0;
}

nav#menu #menu-nav li {
    list-style: none;
    display: inline-block;
    margin-left: 50px;
}

nav#menu #menu-nav li:first-child {
    margin-left: 0;
}

nav#menu #menu-nav li a {
    color: #FFFFFF;
    font-size: 16px;
    font-weight: 300;
    line-height: 60px;
    display: block;
    text-transform: uppercase;
}

nav#menu #menu-nav li.current a,
nav#menu #menu-nav li a:hover {
    color: #DE5E60;
}

/* ==================================================
   Carousel
================================================== */
#carouselExampleControls {
    position: relative;
    overflow: hidden;
}

.carousel-item img {
    opacity: 0.5;
}

/* ==================================================
   Section Page
================================================== */

.page {
    background: #2F3238;
    padding: 50px 0;
    position: relative;
    z-index: 1;
}
/* ... */

